--- a/style.css
+++ b/style.css
@@ -80,3 +80,42 @@ header {
     background: hsl(24, 98%, 58%);
     transition: 0.3s;
 }
+
+.home{
+    width: 100%;
+    min-height: 440px;
+    background: var(--container-color);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+.home-text{
+    color: var(--bg-color);
+    text-align: center;
+}
+.home-title{
+    font-size: 3.5rem;
+}
+.home-subtitle{
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.post-filter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 2rem !important;
+}
+.filter-item{
+    font-size: 0.9rem;
+    font-weight: 500;
+    cursor: pointer;;
+}
+.active-filter{
+    background: var(--second-color);
+    color: var(--bg-color)
+    padding: 4px 10px;
+    border-radius: 4px;
+}
