--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header {
 }
 .active-filter{
     background: var(--second-color);
-    color: var(--bg-color)
+    color: var(--bg-color);
     padding: 4px 10px;
     border-radius: 5px;
     border-width: 100px
