--- a/css/hostels.css
+++ b/css/hostels.css
@@ -1,4 +1,153 @@
-.test{
-    color:aqua;
-    background-color: blueviolet;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+* {
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
+    box-sizing: border-box;
+}
+
+
+:root {
+    --container-color: #1a1e21;
+    --second-color: #fd8f44;
+    --text-color: #172317;
+    --bg-color: #fff;
+}
+
+::selection {
+    color: var(--bg-color);
+    background: var(--second-color);
+}
+
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+section {
+    padding: 3rem 0 2rem;
+}
+.container {
+    margin: auto;
+    width: 100%;
+    height: fit-content;
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 200;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 40px;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #ff9a57;
+}
+
+.logo span {
+    color: #ff6600;
+}
+
+.login {
+    padding: 8px 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-radius: 4px;
+    background: var(--second-color);
+    color: var(--bg-color);
+}
+
+.login:hover {
+    background: hsl(24, 100%, 56%);
+    transition: 0.3s;
+}
+
+.info {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 17px;
+    text-align: center;
+    display: flex;
+    margin-top: 5rem;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(250, 250, 250);
+    color: rgb(0, 0, 0);
+ }
+
+.girlsboys {
+    background-color: rgb(250, 250, 250);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 0rem !important;
+    overflow: hidden;
+}
+.gblink{
+    display: inline-block;
+    font-size: 1.05rem;
+    background: var(--second-color);
+    color: var(--bg-color);
+    padding: 5px 12px;
+    border-radius: 20px;
+    border-width: 100px
+    
+}
+.gblink:hover {
+    background: hsl(24, 100%, 55%);
+    transition: 0.3s;
+    transform: translateY(0.1rem);
+}
+
+.basic-grid {
+    display: grid;
+    gap: 3rem;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+ }
+
+ .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    align-items: center;
+    background: #ffffff; 
+    font-size: 1.5rem;
+    color: #000000;
+    box-shadow: rgba(20, 12, 3, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+    height: 420px;
+    width: 100%;
+    border-radius: 10px;
+    transition: all 500ms;
+    overflow: hidden;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+ }
+  
+.card:hover {
+    box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+    transform: translateY(-3px) scale(1.02);
+ }
+
+ body {
+    background-color: rgb(240, 240, 243);
 }
